feat: AI 프로젝트 맞춤 추천 기능 완성 및 UX 최적화
AI 추천 서비스 연동 완료: 유저 상황에 맞는 프로젝트 추천 로직 및 데이터 바인딩 구현

사용자 경험(UX) 개선:

페이지 전환 시 검색 상태(스택, 기간, 목적 등) 및 AI 결과 세션 유지 적용

추천 이유 텍스트 가독성 확보를 위한 카드 뷰 UI 개선

다크 모드 환경에 맞춘 입력 폼 및 UI 색상 스키마 최적화